--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -34,7 +34,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: 213.254.92.240
-          username: sharki
-          key: ${{ secrets.SSH_KEY_RASPBERRY_PI }}
+          username:  ${{ secrets.USER }}
+          password:  ${{ secrets.PASSWORD }}
           script: |
             whoami
