--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -36,6 +36,7 @@ jobs:
           port: 22
           host: 213.254.92.240
           username:  ${{ secrets.USER }}
-          password:  ${{ secrets.PASSWORD }}
+          key:  ${{ secrets.PASSWORD }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             whoami
