--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -30,12 +30,11 @@ jobs:
 #      - name: Publish
 #        run: dotnet publish --no-build --configuration Release --output publish
 
-      - name: Deploy
-        uses: appleboy/ssh-action@master
-        with:
-          port: 22
-          host: 213.254.92.240
-          username:  ${{ secrets.USER }}
-          key:  ${{ secrets.KEY }}
-          script: |
-            whoami
+  - name: executing remote ssh commands using password
+    uses: appleboy/ssh-action@v0.1.8
+    with:
+      host: ${{ secrets.HOST }}
+      username: ${{ secrets.USERNAME }}
+      password: ${{ secrets.PASSWORD }}
+      port: ${{ secrets.PORT }}
+      script: whoami
