chore: add verbose tt

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -39,3 +39,4 @@ jobs:
           user: ${{ secrets.USER }}
           pass: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
+          args: "-tt -vvv"
