--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,9 +28,24 @@ jobs:
       - run: |
           whoami
           
-      - name: send custom message with args
-        uses: appleboy/discord-action@master
-        with:
-            webhook_id: ${{ secrets.DISCORD_WEBHOOK_CHANNEL_ID }}
-            webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-            args: The ${{ github.event_name }} event triggered first step.
+      - name: Test Success
+          uses: rjstone/discord-webhook-notify@v1
+          if: success()
+          with:
+            severity: info
+            details: Test Succeeded!
+            webhookUrl: ${{ secrets.DISCORD_URL_WEBHOOK }}
+      - name: Test Failure
+          uses: rjstone/discord-webhook-notify@v1
+          if: failure()
+          with:
+            severity: error
+            details: Test Failed!
+            webhookUrl: ${{ secrets.DISCORD_URL_WEBHOOK }}
+      - name: Test Cancelled
+          uses: rjstone/discord-webhook-notify@v1
+          if: cancelled()
+          with:
+            severity: warn
+            details: Test Cancelled!
+            webhookUrl: ${{ secrets.DISCORD_URL_WEBHOOK }}
